--- a/ember/translations/en.yaml
+++ b/ember/translations/en.yaml
@@ -327,6 +327,8 @@ errors:
   phone: '{description} must be a valid phone number'
   url: '{description} must be a valid url'
 weglide:
+  birthday: Birthday
+  checkbox-label: Upload to WeGlide
   example-prefix: 'Example:'
   upload-failed: Upload to WeGlide was unsuccessful!
   upload-in-progress: Upload to WeGlide still in progress…
